fix(components): align items in `Toolbar`

--- a/packages/components/src/styles/Toolbar.module.css
+++ b/packages/components/src/styles/Toolbar.module.css
@@ -5,6 +5,7 @@
 
 	&[data-orientation='horizontal'] {
 		flex-direction: row;
+		align-items: center;
 	}
 
 	&[data-orientation='vertical'] {
